--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   height: 100vh;
   background-color: black;
-  background-image: url("../img/15.webp");
+  background-image: url("https://cdn.jsdelivr.net/gh/OriPoin/Index/img/17.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
